# archipelag-python

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
archipelag/: __init__.py  client.py  exceptions.py  models.py
docs/: ARCHITECTURE.md
examples/: chat.py
tests/: test_client.py
