[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archipelag"
version = "0.1.0"
description = "Official Python SDK for Archipelag.io distributed compute platform"
readme = "README.md"
license = "MIT"
authors = [
    { name = "archipelag.io", email = "hello@archipelag.io" }
]
keywords = ["archipelag", "distributed-compute", "ai", "inference", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://archipelag.io"
Documentation = "https://docs.archipelag.io/sdk/python"
Repository = "https://github.com/archipelag-io/archipelag-python"
Issues = "https://github.com/archipelag-io/archipelag-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["archipelag"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
